# opencanvas-ai

./: .dockerignore  .env.example  .gitignore  BUILD_WEEK_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  LICENSE_RECOMMENDATION.md  NOTICE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/opencanvas_api/: __init__.py  main.py
apps/api/scripts/: __init__.py  demo.py  worker.py
apps/api/tests/: __init__.py  agent_fixtures.py  conftest.py  document_fixtures.py  postgres_support.py  test_agent_api.py  test_agent_authority_preflight.py  test_agent_cancellation_results.py  test_agent_contracts.py  test_agent_execution_contracts.py  test_agent_grounded_draft.py  test_agent_immutable_context.py  test_agent_lifecycle.py  test_agent_persistence.py  test_agent_persistence_schema.py  test_agent_policy.py  test_agent_postgres.py  test_agent_request_idempotency.py  test_ai_api.py  test_auth_authorization.py  test_canonical_api.py  test_canonical_contract.py  test_canonical_lifecycle_events.py  test_canonical_repository.py  test_canonical_schema.py  test_canonical_service.py  test_canvas_api.py  test_context.py  test_demo_mode.py  test_document_api.py  test_document_extraction_chunking.py  test_document_processing_retrieval.py  test_document_validation.py  test_grounded_ai.py  test_health.py  test_jobs.py  test_migration.py  test_postgres_support.py  test_release_settings.py  test_settings.py  (+3 more)
docs/: ARCHITECTURE.md  (+33 more)
(+104 files in other folders)
